--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
