--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,26 +1,43 @@
 security:
-  # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-  providers:
-    users_in_memory: { memory: null }
-  firewalls:
-    dev:
-      pattern: ^/(_(profiler|wdt)|css|images|js)/
-      security: false
-    main:
-      anonymous: lazy
-      provider: users_in_memory
-
-      # activate different ways to authenticate
-      # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-      # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
   encoders:
     App\Entity\User:
       algorithm: bcrypt
 
-  # Easy way to control access for large sections of your site
-  # Note: Only the *first* access control that matches will be used
+  providers:
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
+
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+
+    register:
+      pattern: ^/api/users/register
+      stateless: true
+      anonymous: true
+
+    login:
+      pattern: ^/api/users/login
+      stateless: true
+      anonymous: true
+      json_login:
+        username_path: email
+        check_path: /api/users/login
+        success_handler: lexik_jwt_authentication.handler.authentication_success
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+    api:
+      pattern: ^/api
+      stateless: true
+      provider: app_user_provider
+      guard:
+        authenticators:
+          - lexik_jwt_authentication.jwt_token_authenticator
+
   access_control:
-  # - { path: ^/admin, roles: ROLE_ADMIN }
-  # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/api/users/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api/users/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
